# pandera_demo

./: README.md  pyproject.toml
src/pandera_demo/: normalize_no_schema.py  normalize_with_schema.py
src/pandera_demo/schema/: normalized_price.py  raw_price.py
src/pandera_demo/utils/: extract_symbols.py  is_sorted_ascending.py  schema_helper.py
tests/pandera_demo_test/: test_normalize_no_schema.py  test_normalize_with_schema.py
tests/pandera_demo_test/data/: price_data.csv
